# semestre_IV

./: .gitignore  readme.md  requirements.txt  resultados_bigO.json  test.py
graphic_visualization/clases/: E06_FernandoLeon.ipynb  E06_FernandoLeon.py  E07_FernandoLeon.ipynb  E09_FernandoLeon.ipynb  E10_FernandoLeon.ipynb  E11_FernandoLeon.ipynb  E12_FernandoLeon.ipynb  clase_3.py  clase_4.py  clase_5.py  datos_inscripcion.csv
graphic_visualization/clases/datos/: escolaridad_gto.csv  gto.geojson  pobreza.csv
graphic_visualization/proyecto_final/: Proyecto_FernandoLeonFranco_codigo.ipynb
graphic_visualization/proyecto_final/data/: Alhóndiga 930.csv  Basilica Colegiata 560.csv  Callejón del Beso 1,360.csv  Casa de Diego Rivera 698.csv  Mercado Hidalgo 600.csv  Monumento Pípila 1,620.csv  jardin_de_la_union_1134.csv  museo_de_las_momias_1650.csv  teatro_juarez_1010.csv  (+1 more)
graphic_visualization/repasos/: repaso_ii.ipynb
machine_learning/clases/: clase_15.ipynb  clase_3.py  clase_6.py  clase_7.py  clase_8.ipynb  gradiente.py  warm_up.py
optimizacion/clases/: warm_up.py
optimizacion/tarea/: algoritmo_karatsuba.py  test.py
optimization/: A_FINAL_FLF.py
optimization/clases/: clase_10.py  clase_18.py  clase_19.py  clase_20.py  clase_5.py  clase_6.py  clase_9.py  test.py
optimization/proyectos/: libreria.py  proyecto_final.py
optimization/tarea/: graficador_bigO.py  qbits.py  tarea_bigO.py  test_rust.py
rusty/: Cargo.toml  pyproject.toml
rusty/src/: lib.rs
sistesis/proyecto_final_borrador/: .env  algoritmos_cuanticos.py  requirements.txt  run.sh
(+33 files in other folders)
