[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusty"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
num-bigint = "0.4"
num-traits = "0.2"

[package.metadata.maturin]
bindings = "pyo3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
panic = 'abort'